--- a/gibprosj/.gitignore
+++ b/gibprosj/.gitignore
@@ -8,7 +8,7 @@ __pycache__/
 
 # Distribution / packaging
 .Python
-build/
+#build/
 develop-eggs/
 dist/
 downloads/
@@ -36,7 +36,7 @@ MANIFEST
 /coverage
 
 # production
-/build
+#/build
 
 # misc
 .DS_Store
