--- a/gibprosj/package.json
+++ b/gibprosj/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.8.2",
     "@emotion/styled": "^11.8.1",
     "@mapbox/mapbox-sdk": "^0.13.3",
+    "@material-ui/styles": "^4.11.4",
     "@mui/icons-material": "^5.5.0",
     "@mui/material": "^5.5.0",
     "@testing-library/jest-dom": "^5.16.1",
