--- a/gibprosj/package.json
+++ b/gibprosj/package.json
@@ -6,6 +6,7 @@
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@mapbox/mapbox-sdk": "^0.13.3",
+    "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
     "@material-ui/styles": "^4.11.4",
     "@mui/icons-material": "^5.6.2",
