--- a/gibprosj/package.json
+++ b/gibprosj/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^17.0.2",
     "react-map-gl": "^7.0.5",
     "react-scripts": "5.0.0",
+    "react-tooltip": "^4.2.21",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -28,12 +29,10 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-
   "engines": {
     "node": "17.4.0",
     "npm": "8.3.2"
   },
-
   "eslintConfig": {
     "extends": [
       "react-app",
